<resources>
    <string name="app_name">Trivia Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gid"> 9022f64581646f253ecb15501ef68c93</string>
    <string name="welcome">Welcome to\nTrivia App</string>
    <string name="start_trivia_btn_label">Start Trivia</string>
    <string name="create_question_btn_label">Create Quiz Question</string>
    <string name="delete_all_btn_label">Delete All My Questions</string>
    <string name="exit_btn_label">Exit</string>
    <string name="title_activity_trvia">TrviaActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="title_activity_trivia">TriviaActivity</string>
    <string name="next_btn_label">Next</string>
    <string name="quit_btn_label">Quit</string>
    <string name="submit_button_label">Submit</string>
    <string name="plus_button_label">+</string>
    <string name="image_button_label">Select Image</string>
    <string name="trivia_results_text_view">Trivia Results</string>
    <string name="quit_button_label">Quit</string>
    <string name="try_again_label">Try Again</string>
    <string name="try_again_results_text_view">Try again and see if you can get all the correct answers!</string>
</resources>
