<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.arjun.hw3.CreateQuizActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button_label"
        android:id="@+id/SelectImgBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_gravity="top"
        android:layout_below="@+id/SelectImgBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextQuestion"
        android:hint="Type question here"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextOption"
        android:layout_below="@+id/editTextQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Type option here" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_label"
        android:id="@+id/SubmitBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_button_label"
        android:id="@+id/plusbtn"
        android:layout_alignTop="@+id/editTextOption"
        android:layout_alignRight="@+id/editTextQuestion"
        android:layout_alignEnd="@+id/editTextQuestion" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/plusbtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </RadioGroup>

</RelativeLayout>
